[tool.poetry]
name = "movies-database-creator"
version = "0.1.0"
description = ""
authors = ["Didac Fortuny <dacfortuny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.9"
jupytext = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
